# SDET-AI-Agent

./: .gitignore  README.md  crew_agents.drawio  pyproject.toml  requirements.md
output/: edgecases.md  postman_collection.json  testcases.md
src/sdet_ai_agent/: crew.py  main.py
src/sdet_ai_agent/config/: agents.yaml  agents.yaml.bk  tasks.yaml  tasks.yaml.bk
src/sdet_ai_agent/tools/: openapi_spec_parser.py  testcases_markdown_reader.py
